logic/order-service/kube/virtualservice.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: order-service
spec:
  hosts:
    - order-service
  gateways:
    - kong-gateway
  http:
    - route:
        - destination:
            host: order-service
            port:
              number: 80
